# pyneurons

./: .pylintrc  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
pyneurons/: __init__.py  abs.py  bias.py  box.py  compose.py  create.py  fit.py  mae.py  model.py  neuron.py  phi.py  relun.py  vector.py  weight.py
pyneurons/classes/: __init__.py  array.py  binary.py  excitatory.py  inhibitory.py  model.py  neuron.py  relu.py  sigmoid.py  tanh.py  tuple.py
pyneurons/classes/models/: __init__.py  neuron.py
pyneurons/classes/neurons/: __init__.py  binary.py
pyneurons/classes/tuples/: __init__.py  model.py
pyneurons/functions/: __init__.py  activation.py  apply.py  compose.py  concat.py  mse.py  randkey.py  randseed.py  spike.py  stack.py  synapse.py  synapses.py
pyneurons/functions/activations/: __init__.py  binary.py  relu.py  sigmoid.py  spike.py  tanh.py
pyneurons/vjp/: sign.py
tests/: conftest.py  test_api.py  test_concat.py  test_learn.py  test_phi.py  test_stack.py  test_unstack.py  test_xor.py
tests/classes/: test_array.py  test_binary.py  test_excitatory.py  test_inhibitory.py  test_neuron.py  test_pytrees.py  test_tuple.py
tests/functions/: test_activation.py  test_apply.py  test_compose.py  test_concat.py  test_identity.py  test_mse.py  test_spike.py  test_stack.py  test_synapse.py  test_synapses.py
tests/learn/: test_basic.py  test_xor.py
tests/learning/: test_basic.py  test_xor.py
tests/pytree/: test_split.py  test_unstack.py
tests/random/: test_bias.py  test_param.py  test_weight.py
tests/vjp/: test_identity.py
(+73 files in other folders)
