[tool.poetry]
name = "pyneurons"
version = "0.0.0"
description = ""
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ivandustin/pyneurons"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.3.25"
jaxlib = "^0.3.25"
multipledispatch = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
